--- a/UserMaintenance/Entities/Resource1.resx
+++ b/UserMaintenance/Entities/Resource1.resx
@@ -123,4 +123,7 @@
   <data name="FullName" xml:space="preserve">
     <value>Teljesnév</value>
   </data>
+  <data name="Save" xml:space="preserve">
+    <value>Fájlba olvasás</value>
+  </data>
 </root>
